--- a/app/assets/stylesheets/welcome/_faqs-item.sass
+++ b/app/assets/stylesheets/welcome/_faqs-item.sass
@@ -1,11 +1,12 @@
 .faqs-item
+  padding-top: .75rem
   padding-bottom: 2rem
   height: 100%
 
 .faqs-item__inner
   border: solid 2px $welcome-card-border
   background-color: $base
-  padding: 1.25rem 1rem 1rem 2.5rem
+  padding: 1.25rem 1rem 1.25rem
   border-radius: .25rem
   +position(relative)
   height: 100%
@@ -17,12 +18,10 @@
     font-size: .875rem
 
 .faqs-item__title-icon
-  height: 3rem
-  width: 3rem
-  margin-right: .75rem
+  +size(2.75rem)
   position: absolute
   left: -1rem
-  top: -1rem
+  top: -1.5rem
 
 .faqs-item__body
   p
