--- a/app/views/layouts/welcome.html.slim
+++ b/app/views/layouts/welcome.html.slim
@@ -24,4 +24,5 @@ html.is-application lang="ja"
         = render "welcome/welcome_header"
         .welcome-page
           = yield
-    = render "welcome/welcome_footer"
+      = render "welcome/form"
+      = render "welcome/welcome_footer"
