--- a/app/views/welcome/_faq.slim
+++ b/app/views/welcome/_faq.slim
@@ -12,7 +12,7 @@
             | こちら
           | から質問してください。
       .welcome-section__faqs
-        .row
+        .row.is-gutter-width-32
           .col-md-4
             section.faqs-item
               .faqs-item__inner
