--- a/app/views/welcome/_welcome_header.html.slim
+++ b/app/views/welcome/_welcome_header.html.slim
@@ -17,7 +17,7 @@ header.welcome-header
               | ブログ
           li.welcome-header-nav__item
             = link_to faq_path, class: "welcome-header-nav__item-link" do
-              | よくある質問
+              | FAQ
           li.welcome-header-nav__item
             = link_to new_user_path, class: "welcome-header-nav__item-link" do
               | 参加登録
