--- a/app/views/welcome/_conditions.slim
+++ b/app/views/welcome/_conditions.slim
@@ -7,14 +7,12 @@ section.welcome-child-section.is-conditions
       .col-xs-12.col-md-4
         section.welcome-small-section
           .welcome-small-section__inner
-            = image_tag("nda.svg", class: "welcome-small-section__icon")
+            = image_tag("book.svg", class: "welcome-small-section__icon")
             h3.welcome-small-section__title
-              | NDAに<br>同意できる
+              | クレジットカードで<br>学費の支払いができる
             .welcome-small-section__description
               p
-                | カリキュラムには、実際に多くの方が使っている弊社が運営するサービスのコードに手を入れる課題もあるのでNDA（秘密保持契約）を結んでいただきます。
-                | NDA契約の際は免許証などの身分証明書をスマホなどで撮った写真を送っていただきます。
-
+                | カリキュラムの中で書籍が必要なものがあります。書籍代として、大体1万5000円くらいの費用がかかります。
       .col-xs-12.col-md-4
         section.welcome-small-section
           .welcome-small-section__inner
@@ -30,9 +28,10 @@ section.welcome-child-section.is-conditions
       .col-xs-12.col-md-4
         section.welcome-small-section
           .welcome-small-section__inner
-            = image_tag("book.svg", class: "welcome-small-section__icon")
+            = image_tag("nda.svg", class: "welcome-small-section__icon")
             h3.welcome-small-section__title
-              | 多少の教材費を<br>用意できる
+              | 必要な教材を<br>購入できる
             .welcome-small-section__description
               p
-                | カリキュラムの中で書籍が必要なものがあります。書籍代として、大体1万5000円くらいの費用がかかります。
+                | カリキュラムには、実際に多くの方が使っている弊社が運営するサービスのコードに手を入れる課題もあるのでNDA（秘密保持契約）を結んでいただきます。
+                | NDA契約の際は免許証などの身分証明書をスマホなどで撮った写真を送っていただきます。
