管理者・アドバイザーのダッシュボードに、就職活動中のユーザー一覧を表示
WIP

--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -16,6 +16,7 @@ $header-height: 3.125rem
   display: flex
   align-items: center
   transition: all .2s ease-out
+  text-decoration: none
   &:hover
     opacity: .8
 
