--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -11,8 +11,9 @@ header.page-header
       .row
         .col-xs-12.col-xl-6.col-xxl-6
           .thread-list.a-card
-            header.card-header
-              h2.card-header__title 最新のお知らせ
+            header.card-header.is-sm
+              h2.card-header__title
+                | 最新のお知らせ
             = render partial: "announcements", collection: @announcements, as: :announcement
             footer.thread-list__footer
               .thread-list__footer-to-index
@@ -21,10 +22,13 @@ header.page-header
           - if current_user.reports.wip.present?
              = render "users/reports/wip_reports", user: current_user
           - if current_user.active_practices.present?
-            = render "users/practices/active_practices", user: current_user
-          = render "users/practices/completed_practices", user: current_user
+            = render "/users/practices/active_practices", user: current_user
+          - if current_user.completed_practices.present?
+            = render "/users/practices/completed_practices", user: current_user
 
         .col-xs-12.col-xl-6.col-xxl-6
+          - if current_user.admin? || current_user.adviser?
+            = render "job_seeking_users", users: User.all.job_seeking
           - unless current_user.total_learning_time.zero?
             = render "users/grass", user: current_user
           - if current_user.role == :student
