--- a/app/views/home/tos.html.slim
+++ b/app/views/home/tos.html.slim
@@ -38,13 +38,21 @@ h3 個人情報の保護
 
 p 当社のプライバシーポリシーでは、当社におけるユーザーの個人情報の取り扱いについて記載しています。ユーザーには、当社がこのプライバシーポリシーに従ってユーザーの個人情報を利用することや本サービスの承継に伴って個人情報が第三者へ提供されうることに同意のうえで、本サービスを利用して頂きます。
 
-p また、当社は、個人情報以外にも、ユーザーについて、利用したサービス、アップロードしたデータやコンテンツ（但し、当社がこれらのデータやコンテンツを「ユーザーのデータやコンテンツ」の項に定める範囲を超えて利用することはありません。）、利用日時、利用方法、利用環境（携帯端末を通じてご利用の場合の当該端末の通信状態、利用に際しての各種設定情報なども含みます）、IPアドレス、クッキー情報、位置情報、端末の個体識別情報などの履歴情報および特性情報を、ユーザーが本サービスを利用しまたはページを閲覧する際に収集することがあります。
+p
+  | また、当社は、個人情報以外にも、ユーザーについて、利用したサービス、アップロードしたデータやコンテンツ
+  | （但し、当社がこれらのデータやコンテンツを「ユーザーのデータやコンテンツ」の項に定める範囲を超えて利用することはありません。）、
+  | 利用日時、利用方法、利用環境（携帯端末を通じてご利用の場合の当該端末の通信状態、利用に際しての各種設定情報なども含みます）、
+  | IPアドレス、クッキー情報、位置情報、端末の個体識別情報などの履歴情報および特性情報を、
+  | ユーザーが本サービスを利用しまたはページを閲覧する際に収集することがあります。
 
 p 当社は、これらの個人情報、履歴情報および特性情報を、当社のサービスに関連して、個人を識別できない形式に加工した統計データを作成したり、当社や第三者の広告の配信や表示またはマーケティングに利用することがあります。
 
 h3 本サービスの提供の停止
 
-p 当社は、本サービスにかかるコンピュータシステムの保守点検または更新を行う場合など、本サービスの提供が困難と判断した場合には、ユーザーに事前に通知することなく本サービスの提供を停止または中断することがあります。当社は、本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても、理由を問わず責任を負いません。
+p
+  | 当社は、本サービスにかかるコンピュータシステムの保守点検または更新を行う場合など、
+  | 本サービスの提供が困難と判断した場合には、ユーザーに事前に通知することなく本サービスの提供を停止または中断することがあります。
+  | 当社は、本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても、理由を問わず責任を負いません。
 
 h3 ユーザーのデータやコンテンツ
 
@@ -54,7 +62,10 @@ h3 保証の否認と免責
 
 p 当社は、合理的な注意を払ったうえで本サービスを提供していますが、本サービスに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性、セキュリティなどに関する欠陥、エラーやバグ、権利侵害などを含みます。）がないことを保証するものではありません。
 
-p また、当社は、本サービスによってユーザーに生じたあらゆる損害について、一切の責任を負いません。ただし、本サービスに関する当社とユーザーとの間の契約（本規約を含みます。）が消費者契約法に定める消費者契約となる場合、この免責規定は適用されませんが、この場合であっても、当社は、当社の過失（重過失を除きます。）による債務不履行または不法行為によりユーザーに生じた損害のうち特別な事情から生じた損害（当社またはユーザーが損害発生につき予見し、または予見し得た場合を含みます。）について一切の責任を負いません。
+p
+  | また、当社は、本サービスによってユーザーに生じたあらゆる損害について、一切の責任を負いません。
+  | ただし、本サービスに関する当社とユーザーとの間の契約（本規約を含みます。）が消費者契約法に定める消費者契約となる場合、
+  | この免責規定は適用されませんが、この場合であっても、当社は、当社の過失（重過失を除きます。）による債務不履行または不法行為によりユーザーに生じた損害のうち特別な事情から生じた損害（当社またはユーザーが損害発生につき予見し、または予見し得た場合を含みます。）について一切の責任を負いません。
 
 p なお、当社は、本サービスに関して、ユーザーと他のユーザーまたは第三者との間において生じた取引、連絡または紛争等について一切責任を負いません。
 
