--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -20,6 +20,9 @@ header.page-header
     .thread
       .thread__inner.a-card
         header.thread-header
+          - if @report.emotion.present?
+            .thread-header__emotion
+              = Report.faces[@report.emotion]
           .thread-header__reported-at
             | #{l @report.reported_on} の日報
           h1.thread-header__title(class="#{@report.wip? ? "is-wip" : ""}")
@@ -52,8 +55,6 @@ header.page-header
         = render "reports/learning_times", report: @report
 
         .thread-body
-          - if @report.emotion.present?
-            = Report.faces[@report.emotion]
           .thread__description.js-target-blank.is-long-text.js-markdown-view
             = @report.description
           = render "reactions/reactions", reactionable: @report
