--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -55,6 +55,7 @@ header.page-header
                   = link_to @product, data: { confirm: "本当によろしいですか？" }, method: :delete, class: "card-footer-actions__action a-button is-md is-danger is-block" do
                     i.fas.fa-trash-alt
                     | 削除
+                        li.card-footer-actions__item
 
         - if admin_login? || adviser_login?
           .thread-admin-tools
@@ -68,6 +69,19 @@ header.page-header
                 - else
                   = form_for @product.checks.last, url: check_path(@product.checks.last), method: :delete, class: "thread-check-form" do |f|
                     = f.submit "提出物の確認を取り消す", class: "thread-check-form__action is-text"
+
+        .thread-watch
+          .thread-watch__item
+            - if current_user.id.in?(@product.watches.pluck(:user_id))
+              = form_for @watch, url: watch_path, method: :delete, html: { class: "product-watch-form" } do |f|
+                = hidden_field_tag :user_id, current_user.id
+                = hidden_field_tag :product_id, @product.id
+                = f.submit "Unwatch", class: "product-watch-form__action is-text"
+            - else
+              = form_for @watch, html: { class: "product-watch-form" } do |f|
+                = hidden_field_tag :user_id, current_user.id
+                = hidden_field_tag :product_id, @product.id
+                = f.submit "Watch", class: "product-watch-form__action is-text"
 
       .thread-prev-next
         .thread-prev-next__item
