有料化後の静的ページ更新

--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -24,8 +24,9 @@ $welcome-card-border: #5a5f60
 $welcome-default-text: #333738
 $welcome-card-border: #5a5f60
 $welcome-blue: #178bff
+$welcome-light-blue: #d5f2ff
 $welcome-yellow: #faed00
-$welcome-orange: #eda921
+$welcome-orange: #fdb82e
 $welcome-pink: #ef6085
 
 $card-header: #819093
