--- a/app/assets/stylesheets/welcome/_welcome-actions.sass
+++ b/app/assets/stylesheets/welcome/_welcome-actions.sass
@@ -23,5 +23,10 @@
   border-radius: 8px
   cursor: pointer
   text-decoration: none
+  &.is-md
+    height: 3.25rem
+  &.is-sm
+    height: 2.75rem
+    font-size: .9375rem
   &.is-signup
     background-color: $welcome-orange
