--- a/app/views/welcome/_about.slim
+++ b/app/views/welcome/_about.slim
@@ -10,7 +10,7 @@ section.welcome-section.is-about.is-yellow#about
 
       .welcome-actions__items
         .welcome-actions__item
-          = link_to "お問い合わせ・質問", new_user_path, class: "welcome-actions__item-action"
+          = link_to "私たちの考える戦力", new_user_path, class: "welcome-actions__item-action is-md"
 
     .welcome-small-sections.is-conditions
       h3.welcome-small-sections__title
@@ -20,28 +20,28 @@ section.welcome-section.is-about.is-yellow#about
         .col-xs-12.col-md-4
           section.welcome-small-section
             .welcome-small-section__inner
-              = image_tag("nda.svg", class: "welcome-small-section__icon")
+              = image_tag("programmer.svg", class: "welcome-small-section__icon")
               h3.welcome-small-section__title
                 | 現役プログラマーの<br>メンター
               .welcome-small-section__description
                 p
-                  | メンターはアルバイトや講師を専門にしている人ではなく、実際にコードを書くことを仕事にしている現役のプログラマーです。現場目線でのカリキュラム、アドバイスを受けることができます。
+                  | メンターはアルバイトや講師を専門にしている人ではなく、実際にコードを書くことを仕事にしている現役のプログラマーです。現場目線でのアドバイス、Rubyコミュニティの文化なども伝えていきます。
 
         .col-xs-12.col-md-4
           section.welcome-small-section
             .welcome-small-section__inner
-              = image_tag("my-mac.svg", class: "welcome-small-section__icon")
+              = image_tag("github.svg", class: "welcome-small-section__icon")
               h3.welcome-small-section__title
                 | 仕事を想定したチーム開発など<br>現場目線のカリキュラム
               .welcome-small-section__description
                 p
-                  | 仕事とほとんど同じ形式でのチーム開発や
+                  | Railsの使い方の前に、そもそものWebアプリの仕組みやLinuxの基礎など、現場で必要な知識を学べます。仕事と同じ形式でのチーム開発の実践を通してコミュニケーションの取り方や開発の進め方も学べます。
         .col-xs-12.col-md-4
           section.welcome-small-section
             .welcome-small-section__inner
-              = image_tag("book.svg", class: "welcome-small-section__icon")
+              = image_tag("resume.svg", class: "welcome-small-section__icon")
               h3.welcome-small-section__title
                 | 就活に使える<br>成果物
               .welcome-small-section__description
                 p
-                  | 学習の記録である日報、課題の提出物など、たくさんの成果物を得ることができます。それらの成果物は、履歴書や職務経歴書よりも確実なスキルの証明になり、就職に役立ちます。
+                  | 学習の記録である日報、課題の提出物など、たくさんの成果物を得ることができます。それらの成果物は、履歴書や職務経歴書よりも確実なスキルの証明になり、就職に役立ちます。もちろん、実際の就活のアドバイスもします。
