--- a/app/views/welcome/_process.slim
+++ b/app/views/welcome/_process.slim
@@ -8,7 +8,7 @@ section.welcome-section.is-process.is-space#process
     .welcome-small-sections.is-wide
       section.welcome-small-section
         .welcome-small-section__inner
-          = image_tag("study.svg", class: "welcome-small-section__icon")
+          = image_tag("practice.svg", class: "welcome-small-section__icon")
           .welcome-small-section__inner-body
             h3.welcome-small-section__title
               | プラクティスに着手
@@ -17,7 +17,7 @@ section.welcome-section.is-process.is-space#process
                 | フィヨルドブートキャンプオリジナルのオンライン学習アプリを使って学習をします。
       section.welcome-small-section
         .welcome-small-section__inner
-          = image_tag("chat2.svg", class: "welcome-small-section__icon")
+          = image_tag("report.svg", class: "welcome-small-section__icon")
           .welcome-small-section__inner-body
             h3.welcome-small-section__title
               | 日報を書く
@@ -26,7 +26,7 @@ section.welcome-section.is-process.is-space#process
                 | 就職したい会社の条件などをヒヤリングし、希望に合った会社を提案します。また、逆にその会社にもヒヤリングして、その会社に入るためにさらに勉強しておいたほうがいいことなどのアドバイスをします。
       section.welcome-small-section
         .welcome-small-section__inner
-          = image_tag("web-service.svg", class: "welcome-small-section__icon")
+          = image_tag("question_1.svg", class: "welcome-small-section__icon")
           .welcome-small-section__inner-body
             h3.welcome-small-section__title
               | 質問をする
@@ -35,7 +35,7 @@ section.welcome-section.is-process.is-space#process
                 | 学習アプリの
       section.welcome-small-section
         .welcome-small-section__inner
-          = image_tag("web-service.svg", class: "welcome-small-section__icon")
+          = image_tag("chat.svg", class: "welcome-small-section__icon")
           .welcome-small-section__inner-body
             h3.welcome-small-section__title
               | チャットでコミュニケーション
@@ -44,7 +44,7 @@ section.welcome-section.is-process.is-space#process
                 | 学習アプリの
       section.welcome-small-section
         .welcome-small-section__inner
-          = image_tag("tada.svg", class: "welcome-small-section__icon")
+          = image_tag("product.svg", class: "welcome-small-section__icon")
           .welcome-small-section__inner-body
             h3.welcome-small-section__title
               | 課題提出
