--- a/app/views/welcome/pricing.html.slim
+++ b/app/views/welcome/pricing.html.slim
@@ -7,4 +7,8 @@
 
 section.welcome-section
   .container
-    | どんな小さな羽さえもそよがぬ 弱い息のお話をせがむとは！でもこの哀れな声一つ三つあわせた舌に逆らえましょうか？居丈だかなプリマがまずは唱えるその宣告は「おはじめなさい」すこし優しげに二番手の希望
+    | 月額
+    | 29,800
+    | 円
+    div
+      | どんな小さな羽さえもそよがぬ 弱い息のお話をせがむとは！でもこの哀れな声一つ三つあわせた舌に逆らえましょうか？居丈だかなプリマがまずは唱えるその宣告は「おはじめなさい」すこし優しげに二番手の希望
