--- a/app/views/welcome/_conditions.slim
+++ b/app/views/welcome/_conditions.slim
@@ -12,7 +12,8 @@ section.welcome-child-section.is-conditions
               | クレジットカードで<br>学費の支払いができる
             .welcome-small-section__description
               p
-                | カリキュラムの中で書籍が必要なものがあります。書籍代として、大体1万5000円くらいの費用がかかります。
+                | 学費の支払いにはクレジットカードが必要です。なので、学費の支払いができるクレジットカードを持っていることが必須条件になります。クレジットカードは、Visa、Mastercard、American Express、Discover、Diners Club、JCB が使えます。
+
       .col-xs-12.col-md-4
         section.welcome-small-section
           .welcome-small-section__inner
@@ -21,17 +22,18 @@ section.welcome-child-section.is-conditions
               | 自分のMacを<br>用意できる
             .welcome-small-section__description
               p
-                | 用意しているカリキュラムはMacを使って学習することを前提に作られています。なので、最新のOSが動くMacを持っていることが必要です。
-                | これからMacを購入をする場合は、どの機種を買うべきかアドバイスをしますので、相談をしてから購入してください。
-              p
-                | また、学習の課題の中でビデオチャットを使うものもあります。なので、カメラが付いてない Mac で参加をする場合は、外付けの Web カメラとマイクをご用意ください。
+                | 用意しているカリキュラムはMacを使って学習することを前提に作られています。なので、最新のOSが動くMacを持っていることが必要です。これからMacを購入をする場合は、どの機種を買うべきかアドバイスをしますので、相談をしてから購入してください。
+            .welcome-actions__items
+              .welcome-actions__item
+                = link_to "http://docs.komagata.org/5535", class: "welcome-actions__item-action is-sm", target: "_blank"  do
+                  | おすすめのMac
       .col-xs-12.col-md-4
         section.welcome-small-section
           .welcome-small-section__inner
             = image_tag("nda.svg", class: "welcome-small-section__icon")
             h3.welcome-small-section__title
-              | 必要な教材を<br>購入できる
+              | 必要な教材・機材を<br>購入できる
             .welcome-small-section__description
               p
-                | カリキュラムには、実際に多くの方が使っている弊社が運営するサービスのコードに手を入れる課題もあるのでNDA（秘密保持契約）を結んでいただきます。
-                | NDA契約の際は免許証などの身分証明書をスマホなどで撮った写真を送っていただきます。
+                | カリキュラムの中で書籍が必要なものがあります。書籍代として、大体1万5000円くらいの費用がかかります。
+                | また、学習の課題の中でビデオチャットを使うものもあります。なので、カメラが付いてない Mac で参加をする場合は、外付けの Web カメラとマイクを購入する必要があります。
