--- a/app/assets/stylesheets/mixins/_button.sass
+++ b/app/assets/stylesheets/mixins/_button.sass
@@ -18,6 +18,8 @@
     +media-breakpoint-up(md)
       max-width: 18rem
       +margin(horizontal, auto)
+    &.is-select
+      +margin(horizontal, 0)
   &:focus
     outline: none
   &:disabled
