--- a/app/views/home/_question_form.slim
+++ b/app/views/home/_question_form.slim
@@ -31,7 +31,7 @@
               span.option-text 同意する
         .auth-form-item__error(data-formrun-show-if-error="個人情報利用同意")
           | 同意する必要があります
-        .auth-form-item__help
+        .a-form-help
           p 質問をするには個人情報の取り扱いについて同意が必要です。
 
     .auth-form-action
