静的ページの内容更新

--- a/app/assets/stylesheets/welcome/_faqs-item.sass
+++ b/app/assets/stylesheets/welcome/_faqs-item.sass
@@ -6,25 +6,25 @@
 .faqs-item__inner
   border: solid 2px $welcome-card-border
   background-color: $base
-  padding: 1.25rem 1rem 1.25rem
+  padding: 1rem 1.25rem
   border-radius: .25rem
   +position(relative)
   height: 100%
 
 .faqs-item__title
-  +text-block(1.125rem 1.45 0 .5rem, 600 flex)
+  +text-block(1rem 1.5 0 .5rem, 600 flex)
   align-items: baseline
   +media-breakpoint-down(sm)
     font-size: .875rem
 
 .faqs-item__title-icon
-  +size(2.75rem)
+  +size(2.5rem)
   position: absolute
-  left: -1rem
-  top: -1.5rem
+  left: -1.5rem
+  top: -1.25rem
 
 .faqs-item__body
   p
-    +text-block(1rem 1.6 .5em)
+    +text-block(.875rem 1.6 .5em)
     &:last-child
       margin-bottom: 0
