--- a/app/assets/stylesheets/welcome/_welcome-small-sections.sass
+++ b/app/assets/stylesheets/welcome/_welcome-small-sections.sass
@@ -129,6 +129,18 @@
     +media-breakpoint-down(sm)
       text-align: center
 
+.welcome-small-section__title-number
+  +text-block(.9375rem 1, inline-flex 800)
+  font-family: 'Roboto Mono', monospace
+  align-items: center
+  justify-content: center
+  border-radius: 50%
+  +size(1.75rem)
+  background-color: $welcome-yellow
+  margin-right: .5rem
+  vertical-align: bottom
+  border: solid 2px $default-text
+
 .welcome-small-section__description
   p
     +text-block(.875rem 1.6 0 1.2em)
