--- a/app/views/welcome/_about.slim
+++ b/app/views/welcome/_about.slim
@@ -10,7 +10,7 @@ section.welcome-section.is-about.is-yellow#about
 
       .welcome-actions__items
         .welcome-actions__item
-          = link_to "私たちの考える戦力", new_user_path, class: "welcome-actions__item-action is-md"
+          = link_to "私たちの考える戦力", new_user_path, class: "a-welcome-button is-md"
 
     .welcome-small-sections.is-conditions
       h3.welcome-small-sections__title
