--- a/app/views/welcome/_conditions.slim
+++ b/app/views/welcome/_conditions.slim
@@ -22,10 +22,10 @@ section.welcome-child-section.is-conditions
               | 自分のMacを<br>用意できる
             .welcome-small-section__description
               p
-                | 用意しているカリキュラムはMacを使って学習することを前提に作られています。なので、最新のOSが動くMacを持っていることが必要です。これからMacを購入をする場合は、どの機種を買うべきかアドバイスをしますので、相談をしてから購入してください。
+                | 用意しているカリキュラムはMacを使って学習することを前提に作られています。なので、最新のOSが動くMacを持っていることが必要です。これからMacを購入をする場合は、以下のリンク先を参考にしてください。
             .welcome-actions__items
               .welcome-actions__item
-                = link_to "http://docs.komagata.org/5535", class: "welcome-actions__item-action is-sm", target: "_blank"  do
+                = link_to "http://docs.komagata.org/5535", class: "a-welcome-button is-sm", target: "_blank"  do
                   | おすすめのMac
       .col-xs-12.col-md-4
         section.welcome-small-section
