--- a/app/assets/stylesheets/atoms/_button.sass
+++ b/app/assets/stylesheets/atoms/_button.sass
@@ -53,3 +53,23 @@ input[type="button"]
   li:not(:first-child):not(:last-child)
     .a-button
       border-radius: 0
+
+.a-welcome-button
+  +size(auto 4rem)
+  +text-block(1.125rem 1, flex 700 $welcome-default-text)
+  max-width: 22rem
+  margin: 0 auto
+  background: $welcome-yellow
+  align-items: center
+  justify-content: center
+  border: solid 4px $welcome-default-text
+  border-radius: 8px
+  cursor: pointer
+  text-decoration: none
+  &.is-md
+    height: 3.25rem
+  &.is-sm
+    height: 2.75rem
+    font-size: .9375rem
+  &.is-signup
+    background-color: $welcome-orange
