--- a/app/views/welcome/_faq.slim
+++ b/app/views/welcome/_faq.slim
@@ -21,7 +21,7 @@
                   | 学習を終えるのにどれくらいの時間がかかりますか？
                 .faqs-item__body
                   p
-                    | かかる時間は人それぞれですが、プログラム経験が全くない方が平日週5日8時間学習をして、大体8ヶ月〜12ヶ月くらいで学習を終える方が多いです。
+                    | かかる時間は人それぞれですが、プログラム経験が全くない人の場合、大体900時間弱の時間がかかります。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
@@ -30,21 +30,16 @@
                   | 途中で辞めることは可能ですか？
                 .faqs-item__body
                   p
-                    | ある程度のプログラムを書くことは学習をすれば誰でもできますが、プログラムをすることを仕事にすることは、誰でもできるものでもありません。
-                    | 自分がプログラムを書くことを仕事にすることに向いていないと気付くことも一つの価値だと考えています。
-                    | 向いていないと気付いたときはいつでも辞めることができます。
+                    | いつでも退会ができます。退会をすると翌月からの請求は止まります。退会をしない限りは請求は止まらず、学習アプリにログインをしていなくても請求されてしまうので、学習をやめる場合は必ず退会を行ってください。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
                 h3.faqs-item__title
                   = image_tag("question.svg", class: "faqs-item__title-icon")
-                  | 今プログラマーとして働いていて、就職を考えています。
-                  | 仕事をしながら学習をしたいので週3日計24時間以上の時間を作れないときもあります。
-                  | それでも参加できますか？
+                  | 仕事をしながら学習をしたいのであまり時間が取れないのですがそれでも参加できますか？
                 .faqs-item__body
                   p
-                    | プログラマーとして仕事をしていた経験のある方の場合、週3日計24時間以上の条件は適用されません。
-                    | お気軽に参加できるかお問い合わせください。
+                    | 学習時間の制限はありませんので、自分のできるペースで学習を進めることができます。ただ、卒業までに時間がかかってしまうと、それだけ合計の学費はかかってしまいます。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
@@ -53,8 +48,7 @@
                   | 就職先が決まっているのですが、就職までの間学習をしたいです。その場合、参加は可能ですか？
                 .faqs-item__body
                   p
-                    | 学費を就職先企業が支払うことで成り立っているサービスですので、基本的に就職先が決まっている方の参加はできません。
-                    | ただし、就職予定の会社が学費を支払う契約を交わした場合は参加可能です。就職予定の会社に交渉してみてください。
+                    | はい、そのような場合も参加可能です。実際、フィヨルドブートキャンプは企業の新人研修でも利用されています。もし、企業の研修として利用する場合は法人用のプランがございますのでご連絡ください。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
@@ -63,7 +57,7 @@
                   | 転職は考えていないのですが、スキルアップのためプログラミングの勉強がしたいです。その場合、参加は可能ですか？
                 .faqs-item__body
                   p
-                    | 学費を就職先企業が支払うことで成り立っているサービスですので、就職、転職を考えていない方のスキルアップ目的での参加はできません。
+                    | はい、可能です。フィヨルドブートキャンプは就職できるだけのスキルを身につけることを目標にしていますが、就職を必ずしなくてはいけないという縛りはありません。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
@@ -72,7 +66,7 @@
                   | 自宅からのリモートではなくオフィスに通って学習をしたいのですが可能ですか？
                 .faqs-item__body
                   p
-                    | 席に空きがある場合は可能です。希望者が多い場合は、通う日数の多い方が優先になります。
+                    | 事前に座席の予約をしてからの利用になりますので、予約を取れた場合は可能です。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
@@ -81,7 +75,7 @@
                   | 現在、大学に在学中なのですが、参加できますか？
                 .faqs-item__body
                   p
-                    | 在学中でも卒業後にプログラマーとして就職することを希望していましたら参加可能です。
+                    | 学生でも参加可能です。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
@@ -90,7 +84,7 @@
                   | Mac ではなく、 Linux で学習をしたいのですが可能ですか？
                 .faqs-item__body
                   p
-                    | Linuxでも可能ですが、条件があります。用意しているカリキュラムはMacを想定して作られています。そのため、Linuxでカリキュラムを行う場合は自分自身でMac用のカリキュラムをLinuxに合わせて操作方法などを変える必要があります。それができるだけのLinuxのスキルがある方のみ、Linuxで学習をすることを OK とします。
+                    | Linux でも可能ですが、条件があります。用意しているカリキュラムは Mac を想定して作られています。そのため、Linux でカリキュラムを行う場合は自分自身で Mac 用のカリキュラムを Linux に合わせて操作方法などを変える必要があります。それができるだけの Linux のスキルがある方のみ、Linux で学習をすることを OK とします。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
@@ -99,6 +93,49 @@
                   | 古い OS のままで学習をしたいのですが可能ですか？
                 .faqs-item__body
                   p
-                    | カリキュラムが、最新のMacのOSを想定して作られています。多少古い場合はどうにかなるかもしれませんが、OSのせいで学習に詰まることが出てくるかもしれません。何かしら事情があってお手持ちのMacのバージョンが上げられない場合は、それとは別のMacを用意してから参加申し込みをお願いします。
-
-    = link_to "質問はこちらから", new_inquiry_path, class: "welcome-section__action"
+                    | カリキュラムが、最新の Mac の OS を想定して作られています。多少古い場合はどうにかなるかもしれませんが、OS のせいで学習に詰まることが出てくるかもしれません。何かしら事情があってお手持ちの Mac のバージョンが上げられない場合は、それとは別の Mac を用意してから参加されることをおすすめします。
+          .col-md-4
+            section.faqs-item
+              .faqs-item__inner
+                h3.faqs-item__title
+                  = image_tag("question.svg", class: "faqs-item__title-icon")
+                  | 途中、数ヶ月お休みをしたいのですが、その場合も学費を払う必要はありますか？
+                .faqs-item__body
+                  p
+                    | 事情があって長期の休みを取る場合、事前に連絡をいただければ休会が可能です。連絡が遅れた場合は学費が引き落とされ、それについての返金はできないのでご注意ください。
+          .col-md-4
+            section.faqs-item
+              .faqs-item__inner
+                h3.faqs-item__title
+                  = image_tag("question.svg", class: "faqs-item__title-icon")
+                  | カリキュラムを終えた後、就職の支援は行ってくれますか？
+                .faqs-item__body
+                  p
+                    | はい、希望者のみフィヨルドブートキャンプ生のための会社説明会を行ったり、エージェントを紹介したりなどの就職支援を行います。ただし、就職にはプログラミングスキル以外のことも必要なので、誰でも必ず就職できるとはいえません。
+          .col-md-4
+            section.faqs-item
+              .faqs-item__inner
+                h3.faqs-item__title
+                  = image_tag("question.svg", class: "faqs-item__title-icon")
+                  | 転職エージェントを使って就職活動をすることは可能ですか？
+                .faqs-item__body
+                  p
+                    | はい、就職活動について制限はありません。希望があれば弊社でもエージェントを紹介することも可能です。
+          .col-md-4
+            section.faqs-item
+              .faqs-item__inner
+                h3.faqs-item__title
+                  = image_tag("question.svg", class: "faqs-item__title-icon")
+                  | 卒業生が Ruby 界隈で有名な企業に就職していますが、私もそういった企業に就職できますか？
+                .faqs-item__body
+                  p
+                    | 個人によります。弊社と仲良くしてくれてる Ruby 界隈で有名な企業に推薦をする場合もありますが、推薦をする側も責任があるため、誰でも推薦をすることができるとは言えません。ただし、そもそもフィヨルドブートキャンプを卒業することはとても難しく、それを達成できた時点で十分推薦できる人物だと判断することがほとんどです。
+          .col-md-4
+            section.faqs-item
+              .faqs-item__inner
+                h3.faqs-item__title
+                  = image_tag("question.svg", class: "faqs-item__title-icon")
+                  | プログラマーは男性が多いと聞いたことがありますが、女性でも大丈夫ですか？
+                .faqs-item__body
+                  p
+                    | 全く問題ありません。フィヨルドブートキャンプは女性比率が高く、たくさんの女性が卒業しプログラマーとして就職し活躍しています。
