--- a/app/assets/stylesheets/welcome/_welcome-header-nav.sass
+++ b/app/assets/stylesheets/welcome/_welcome-header-nav.sass
@@ -1,6 +1,8 @@
 .welcome-header-nav
   height: 100%
   margin-left: 3rem
+  +media-breakpoint-down(sm)
+    display: none
 
 .welcome-header-nav__items
   height: 100%
