--- a/app/views/welcome/_faq.slim
+++ b/app/views/welcome/_faq.slim
@@ -39,7 +39,7 @@
                   | 仕事をしながら学習をしたいのであまり時間が取れないのですがそれでも参加できますか？
                 .faqs-item__body
                   p
-                    | 学習時間の制限はありませんので、自分のできるペースで学習を進めることができます。ただ、卒業までに時間がかかってしまうと、それだけ合計の学費はかかってしまいます。
+                    | 学習時間の制限はありませんので、自分のできるペースで学習を進めることができます。ただ、卒業までに時間がかかってしまうと、それだけ合計の料金はかかってしまいます。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
@@ -99,10 +99,10 @@
               .faqs-item__inner
                 h3.faqs-item__title
                   = image_tag("question.svg", class: "faqs-item__title-icon")
-                  | 途中、数ヶ月お休みをしたいのですが、その場合も学費を払う必要はありますか？
+                  | 途中、数ヶ月お休みをしたいのですが、その場合も料金を払う必要はありますか？
                 .faqs-item__body
                   p
-                    | 事情があって長期の休みを取る場合、事前に連絡をいただければ休会が可能です。連絡が遅れた場合は学費が引き落とされ、それについての返金はできないのでご注意ください。
+                    | 事情があって長期の休みを取る場合、事前に連絡をいただければ休会が可能です。連絡が遅れた場合は料金が引き落とされ、それについての返金はできないのでご注意ください。
           .col-md-4
             section.faqs-item
               .faqs-item__inner
