--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -5,6 +5,7 @@
 = render "welcome/main_visual"
 .welcome-sections
   = render "welcome/about"
+  = render "welcome/pricing"
   = render "welcome/tutorials"
   = render "welcome/eligibility"
   = render "welcome/process"
