--- a/app/assets/stylesheets/welcome/_welcome-actions.sass
+++ b/app/assets/stylesheets/welcome/_welcome-actions.sass
@@ -6,7 +6,13 @@
   display: flex
   justify-content: center
   +margin(horizontal, -.75rem)
+  +media-breakpoint-down(sm)
+    display: block
 
 .welcome-actions__item
-  +padding(horizontal, .75rem)
-  width: 20rem
+  +media-breakpoint-up(md)
+    +padding(horizontal, .75rem)
+    width: 20rem
+  +media-breakpoint-down(sm)
+    &:not(:first-child)
+      margin-top: .75rem
