--- a/app/assets/stylesheets/welcome/_welcome-small-sections.sass
+++ b/app/assets/stylesheets/welcome/_welcome-small-sections.sass
@@ -142,6 +142,8 @@
   border: solid 2px $default-text
 
 .welcome-small-section__description
+  &:not(:last-child)
+    margin-bottom: 1rem
   p
     +text-block(.875rem 1.6 0 1.2em)
     +media-breakpoint-down(sm)
@@ -151,3 +153,18 @@
     +hover-link-reversal
   p:last-child
     margin-bottom: 0
+
+.welcome-small-section__actions-items
+  display: flex
+  justify-content: center
+  +margin(horizontal, -.75rem)
+  +media-breakpoint-down(sm)
+    display: block
+
+.welcome-small-section__actions-item
+  +media-breakpoint-up(md)
+    +padding(horizontal, .75rem)
+    width: 20rem
+  +media-breakpoint-down(sm)
+    &:not(:first-child)
+      margin-top: .75rem
