Select2のプルダウンの高さを縮めた
テストでSubmitボタンが隠れて押せないため。

--- a/app/assets/stylesheets/modules/_select2.sass
+++ b/app/assets/stylesheets/modules/_select2.sass
@@ -3,7 +3,7 @@ $select2-font-size: .8125rem
 $select2-border-color: $background-shade
 $select2-option-border-color: $background
 $select2-highlighted-color: rgba($main, .8)
-$select2-results-height: calc(100vh - 380px)
+$select2-results-height: 200px
 $select2-selection-choice-border: $main
 $select2-selection-choice-background: mix($main, $base, 10%)
 
