新しいユーザー登録メールを作成
カード登録に関する注意を追加

--- a/app/assets/stylesheets/atoms/_card.sass
+++ b/app/assets/stylesheets/atoms/_card.sass
@@ -17,3 +17,7 @@
   [class*=col-] + [class*=col-] &:first-child
     +media-breakpoint-down(md)
       margin-top: 1rem
+.a-card-notice
+  p
+    font-size: 1rem
+    line-height: 1.5rem
