--- a/app/views/card/show.html.slim
+++ b/app/views/card/show.html.slim
@@ -19,3 +19,4 @@ header.page-header
           ul.auth-form-action__items
             li.auth-form-action__item
               = link_to "編集", edit_card_path, class: "is-button-simple-lg-warning"
+    = render "notice"
