--- a/app/assets/stylesheets/blocks/page/_page-header.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header.sass
@@ -17,6 +17,7 @@
 
 .page-header__title
   +text-block(1.25rem 1, $main 600)
+  padding: 0.75rem 0
   font-feature-settings: "palt"
   letter-spacing: .02em
   +media-breakpoint-down(sm)
