--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -74,12 +74,13 @@ nav.global-nav
             .global-nav-links__link-icon
               i.fas.fa-user
             .global-nav-links__link-label 登録情報変更
-        li.global-nav-links__item.is-hidden-md-up
-          = link_to new_card_path, class: "global-nav-links__link #{current_link /^card/}" do
-            .global-nav-links__link-icon
-              i.fas.fa-credit-card
-            .global-nav-links__link-label クレジットカード
-        - if current_user && current_user.admin?
+        - if !current_user.adviser? && !current_user.mentor?
+          li.global-nav-links__item.is-hidden-md-up
+            = link_to new_card_path, class: "global-nav-links__link #{current_link /^card/}" do
+              .global-nav-links__link-icon
+                i.fas.fa-credit-card
+              .global-nav-links__link-label クレジットカード
+        - if admin_login?
           li.global-nav-links__item.is-hidden-md-up
             = link_to admin_root_path, class: "global-nav-links__link" do
               .global-nav-links__link-icon
