--- a/app/views/card/new.html.slim
+++ b/app/views/card/new.html.slim
@@ -6,9 +6,10 @@ header.page-header
       h2.page-header__title = title
 
 .page-body
-  .a-card.auth-form.is-sign-up.a-card.is-in-app
-    header.auth-form__header
-      h1.auth-form__title
-        | クレジットカード登録
-    .auth-form__body
-      = render "form", action: :new
+  .container
+    .a-card.auth-form.is-sign-up.a-card.is-in-app
+      header.auth-form__header
+        h1.auth-form__title クレジットカード登録
+      .auth-form__body
+        = render "form", action: :new
+    = render "notice"
