--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -9,12 +9,11 @@
   <tr>
     <td style="word-wrap:break-word;font-size:0px;padding:16px 24px 16px 24px;" align="left">
       <div style="cursor:auto;font-family:sans-serif; font-size:14px; line-height:1.8; text-align:left;">
-        <p><span style="font-size:14px; line-height: 1.8;"><%= @user.full_name %>さん、はじめまして。</span></p>
-        <p><span style="font-size:14px; line-height: 1.8;">フィヨルドブートキャンプの駒形と申します。</span><br><span
-            style="font-size:14px; line-height: 1.8;">フィヨルドブートキャンプにお申し込みありがとうございます。</span></p>
-        <p><span style="font-size:14px; line-height: 1.8;">今日からフィヨルドブートキャンプスタートになります。</span></p>
-        <p><span style="font-size:14px; line-height: 1.8;">下のボタンをクリック、申込時に設定したユーザー名、パスワードを使ってフィヨルドブートキャンプにログイン後、ナビゲーションにある「プラクティス」のページへ行き、上から順番にプラクティス（フィヨルドブートキャンプでは、課題をプラクティスと呼んでいます）を進めていってください。</span></p>
-        <p><span style="font-size:14px; line-height: 1.8;">「プラクティス」の途中にチャットルームに入る、というものがあり、それ以降はチャットにて質問をお願いしますが、その前で何か質問がありましたら、<%= link_to "komagata@fjord.jp", "mailto:komagata@fjord.jp" %> までメールにてご質問ください。</span></p>
+        <% if @user.adviser? %>
+          <%= render "adviser", user: @user %>
+        <% else %>
+          <%= render "student", user: @user %>
+        <% end %>
       </div>
     </td>
   </tr>
