ビューでの不要なclassを削除

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -38,5 +38,5 @@
                 | 削除
           - if correct_answer.present? && answer == correct_answer && (current_user == question.user || admin_login?)
             li.card-footer-actions__item
-              = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :patch, class: "" do
+              = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :patch do
                 | ベストアンサーを取り消す
